website/versioned_docs/version-2.11.x/reference/subsystems/scalapb.mdx
---
title: scalapb
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The ScalaPB protocol buffer compiler (https://scalapb.github.io/).

Backend: <span className="color--primary">`pants.backend.experimental.codegen.protobuf.scala`</span>

Config section: <span className="color--primary">`[scalapb]`</span>

<span className={styles.options}>

## Basic options

### `runtime_dependencies`

<Option
  cli_repr={`--scalapb-runtime-dependencies="[<target_option>, <target_option>, ...]"`}
  env_repr="PANTS_SCALAPB_RUNTIME_DEPENDENCIES"
  default_repr={`[]`}
>
  A list of addresses to `jvm_artifact` targets for the runtime dependencies
  needed for generated Scala code to work. For example,
  `['3rdparty/jvm:scalapb-runtime']`. These dependencies will be automatically
  added to every `protobuf_sources` target. At the very least, this option must
  be set to a `jvm_artifact` for the
  `com.thesamet.scalapb:scalapb-runtime_SCALAVER:0.11.6` runtime library.
</Option>

### `jvm_plugins`

<Option
  cli_repr={`--scalapb-jvm-plugins="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SCALAPB_JVM_PLUGINS'
  default_repr={`[]`}
>
A list of JVM-based `protoc` plugins to invoke when generating Scala code from protobuf files. The format for each plugin specifier is `NAME=ARTIFACT` where NAME is the name of the plugin and ARTIFACT is either the address of a `jvm_artifact` target or the colon-separated Maven coordinate for the plugin&#x27;s jar artifact.

For example, to invoke the fs2-grpc protoc plugin, the following option would work: `--scalapb-jvm-plugins=fs2=org.typelevel:fs2-grpc-codegen_2.12:2.3.1`. (Note: you would also need to set --scalapb-runtime-dependencies appropriately to include the applicable runtime libraries for your chosen protoc plugins.)

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--scalapb-version=<str>`}
  env_repr="PANTS_SCALAPB_VERSION"
  default_repr={`0.11.6`}
>
  Version string for the tool. This is available for substitution in the
  `[scalapb].artifacts` option by including the string `{version}`.
</Option>

### `artifacts`

<Option
  cli_repr={`--scalapb-artifacts="['<str>', '<str>', ...]"`}
  env_repr="PANTS_SCALAPB_ARTIFACTS"
  default_repr={`["com.thesamet.scalapb:scalapbc_2.13:{version}"]`}
>
  Artifact requirements for this tool using specified as either the address of a
  `jvm_artifact` target or, alternatively, as a colon-separated Maven
  coordinates (e.g., group:name:version). For Maven coordinates, the string `
  {version}` version will be substituted with the value of the
  `[scalapb].version` option.
</Option>

### `lockfile`

<Option
  cli_repr={`--scalapb-lockfile=<str>`}
  env_repr='PANTS_SCALAPB_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` option. See https://github.com/pantsbuild/pants/blob/release_2.11.1/src/python/pants/backend/codegen/protobuf/scala/scalapbc.default.lockfile.txt for the default lockfile contents.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 jvm-generate-lockfiles --resolve=scalapb`.

</Option>

## Deprecated options

None

</span>

